[NUGUDI-151] feat(api): OpenAPI 최신화 반영
